# COMP3340GraphicsEngine2

./: .gitignore  CMakeLists.txt  Material.hpp  Mesh.hpp  MeshRenderer.cpp  MeshRenderer.h  Model.cpp  Model.h  README.md  Texture.hpp
include/components/: Camera.h  IComponent.h  LightingManager.h  Mesh.h  Monobehavior.h  Transform.h
include/components/abstract/: IComponent.hpp  Monobehavior.hpp
include/components/rendering/: Light.hpp  Material.hpp  Mesh.hpp  MeshRenderer.h  Model.h  Texture.hpp
include/entities/: Entity.h
include/graphics/: BufferObject.h  Camera.h  Material.hpp  Mesh.h  Mesh.hpp  MeshAttributeFlags.h  MeshRenderer.h  Renderer.h  TestCube.h  Texture.hpp  Vertex.hpp
include/input/: InputManager.h
include/scripts/: CameraController.h  DayNightLightCycle.h  TestHelloWorld.h
include/shaders/: Shader.h  Vertex.h
include/systems/: LightingManager.h  MonobehaviorManager.h
include/util/: Debug.h  Time.h  Time.hpp
lib/: assimp-vc143-mtd.lib
resources/models/Buildings/: buildings.mtl
resources/models/Floors/: floor_and_roads.mtl
resources/models/Solar/: solar_panels.mtl
resources/models/Turbines/: wind_turbine.mtl
resources/models/car/: model.mtl
resources/models/cup/: model.mtl
resources/models/wind_turbines/: wind_turbines.mtl
shaders/: Cloud_frag.glsl  Cloud_vert.glsl  Outline_frag.glsl  Outline_vert.glsl  PBR_frag.glsl  PBR_vert.glsl  Quad_Frag.glsl  Quad_vert.glsl  ShadowMap_frag.glsl  anotherTest.glsl  fragment_shader.glsl  fragment_test.glsl  test_frag.glsl
src/components/: Camera.cpp  LightingManager.cpp  Mesh.cpp  Monobehavior.cpp  Transform.cpp
src/components/rendering/: Light.cpp  MeshRenderer.cpp  Model.cpp
src/core/: main.cpp
src/entities/: Entity.cpp
src/graphics/: BufferObject.cpp  Camera.cpp  Mesh.cpp  MeshRenderer.cpp  Renderer.cpp  TestCube.cpp  Texture.hpp
src/input/: InputManager.cpp
src/scripts/: CameraController.cpp  MonobehaviorManager.cpp
src/shaders/: Shader.cpp
src/systems/: DayNightCycleLight.cpp  LightingManager.cpp  MonobehaviorManager.cpp
src/util/: Debug.cpp  Time.cpp
